--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -11,13 +11,14 @@
 		"dev:weapp": "npm run build:weapp -- --watch",
 		"dev:h5": "npm run build:h5 -- --watch",
 		"dev:rn": "npm run build:rn -- --watch",
-		"build:weapp": "taro build --type weapp",
+		"build:weapp": "taro build --type weapp && node scripts/fix-wxss.js",
 		"build:h5": "taro build --type h5",
 		"build:rn": "taro build --type rn",
-		"build:weapp:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type weapp",
+		"build:weapp:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type weapp && node scripts/fix-wxss.js",
 		"build:h5:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type h5",
-		"build:weapp:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type weapp",
+		"build:weapp:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type weapp && node scripts/fix-wxss.js",
 		"build:h5:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type h5",
+		"fix:wxss": "node scripts/fix-wxss.js",
 		"vercel-build": "npm run build:h5:prod",
 		"lint": "eslint --ext .js,.jsx,.ts,.tsx src",
 		"lint:fix": "eslint --ext .js,.jsx,.ts,.tsx src --fix",
