--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -67,6 +67,7 @@
 		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"postcss-calc": "^10.1.1",
 		"sass": "^1.69.5",
 		"typescript": "^5.3.3",
 		"webpack": "^5.89.0",
