--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -11,12 +11,12 @@
 		"dev:weapp": "taro build --type weapp --watch",
 		"dev:h5": "npm run build:h5 -- --watch",
 		"dev:rn": "npm run build:rn -- --watch",
-		"build:weapp": "taro build --type weapp && node config/fix-wxss.js",
+		"build:weapp": "taro build --type weapp",
 		"build:h5": "taro build --type h5",
 		"build:rn": "taro build --type rn",
-		"build:weapp:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type weapp && node config/fix-wxss.js",
+		"build:weapp:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type weapp",
 		"build:h5:prod": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=production taro build --type h5",
-		"build:weapp:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type weapp && node config/fix-wxss.js",
+		"build:weapp:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type weapp",
 		"build:h5:beta": "cross-env NODE_ENV=production TARO_APP_BUILD_ENV=beta taro build --type h5",
 		"vercel-build": "npm run build:h5:prod",
 		"lint": "eslint --ext .js,.jsx,.ts,.tsx src",
@@ -28,7 +28,6 @@
 	},
 	"dependencies": {
 		"@iconify/react": "^6.0.2",
-		"@tailwindcss/postcss": "^4.1.16",
 		"@tarojs/components": "4.1.7",
 		"@tarojs/helper": "4.1.7",
 		"@tarojs/plugin-framework-react": "4.1.7",
@@ -43,7 +42,6 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-router-dom": "^6.26.0",
-		"tailwindcss": "^4.1.16",
 		"tesseract.js": "^6.0.1",
 		"ws": "^8.18.3",
 		"zustand": "^4.4.7"
@@ -60,6 +58,7 @@
 		"@types/react-dom": "^18.2.18",
 		"@typescript-eslint/eslint-plugin": "^6.14.0",
 		"@typescript-eslint/parser": "^6.14.0",
+		"autoprefixer": "^10.4.21",
 		"babel-preset-taro": "4.1.7",
 		"cross-env": "^7.0.3",
 		"eslint": "^8.55.0",
@@ -67,9 +66,16 @@
 		"eslint-plugin-import": "^2.32.0",
 		"eslint-plugin-react": "^7.33.2",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"postcss": "^8.5.6",
 		"postcss-calc": "^10.1.1",
+		"postcss-discard-comments": "^7.0.4",
+		"postcss-nested": "^7.0.2",
+		"postcss-normalize-whitespace": "^7.0.1",
+		"postcss-preset-env": "^10.4.0",
 		"sass": "^1.69.5",
+		"tailwindcss": "^3.4.18",
 		"typescript": "^5.3.3",
+		"weapp-tailwindcss": "^4.5.2",
 		"webpack": "^5.89.0",
 		"webpack-bundle-analyzer": "^4.9.1"
 	},
