--- a/ieclub-taro/project.config.json
+++ b/ieclub-taro/project.config.json
@@ -5,10 +5,10 @@
   "appid": "wxf6389db55319e51c",
   "setting": {
     "urlCheck": false,
-    "es6": true,
-    "enhance": true,
-    "postcss": true,
-    "minified": true,
+    "es6": false,
+    "enhance": false,
+    "postcss": false,
+    "minified": false,
     "condition": true,
     "compileHotReLoad": false
   },
