--- a/ieclub-taro/package.json
+++ b/ieclub-taro/package.json
@@ -86,5 +86,14 @@
 		"last 3 versions",
 		"Android >= 4.1",
 		"ios >= 8"
+	],
+	"sideEffects": [
+		"*.scss",
+		"*.css",
+		"*.less",
+		"src/pages/**/*.jsx",
+		"src/pages/**/*.js",
+		"src/app.js",
+		"src/app.jsx"
 	]
 }
