--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -22,33 +22,23 @@
     "list": [
       {
         "pagePath": "pages/plaza/index",
-        "text": "广场",
-        "iconPath": "assets/icons/plaza.png",
-        "selectedIconPath": "assets/icons/plaza-active.png"
+        "text": "广场"
       },
       {
         "pagePath": "pages/community/index",
-        "text": "社区",
-        "iconPath": "assets/icons/community.png",
-        "selectedIconPath": "assets/icons/community-active.png"
+        "text": "社区"
       },
       {
         "pagePath": "pages/publish/index",
-        "text": "发布",
-        "iconPath": "assets/icons/publish.png",
-        "selectedIconPath": "assets/icons/publish-active.png"
+        "text": "+"
       },
       {
         "pagePath": "pages/activities/index",
-        "text": "活动",
-        "iconPath": "assets/icons/activities.png",
-        "selectedIconPath": "assets/icons/activities-active.png"
+        "text": "活动"
       },
       {
         "pagePath": "pages/profile/index",
-        "text": "我的",
-        "iconPath": "assets/icons/profile.png",
-        "selectedIconPath": "assets/icons/profile-active.png"
+        "text": "我的"
       }
     ]
   },
