--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -1,11 +1,12 @@
 {
   "pages": [
-    "pages/login/index",
+    "pages/auth/index",
     "pages/plaza/index",
     "pages/community/index",
     "pages/publish/index",
     "pages/activities/index",
-    "pages/profile/index"
+    "pages/profile/index",
+    "pages/login/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
