--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -43,23 +43,24 @@
   "dependencies": {
     "@prisma/client": "^5.8.0",
     "ali-oss": "^6.23.0",
-    "axios": "^1.12.2",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
-    "cheerio": "^1.1.2",
+    "cheerio": "^1.0.0-rc.12",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^8.1.0",
+    "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.8.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "multer": "^2.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "sharp": "^0.34.4",
-    "uuid": "^13.0.0",
-    "winston": "^3.18.3",
+    "sharp": "^0.33.5",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0",
     "ws": "^8.18.3",
     "xss": "^1.0.15"
