--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
+    "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "ioredis": "^5.8.2",
