--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
+    "setup": "node scripts/quick-setup.js",
+    "init:rbac": "node scripts/init-rbac.js",
+    "assign:role": "node scripts/assign-role.js",
+    "check:db": "node scripts/check-db.js",
     "migrate": "npx prisma migrate deploy",
     "migrate:dev": "npx prisma migrate dev",
     "migrate:reset": "npx prisma migrate reset",
@@ -43,6 +47,7 @@
   "dependencies": {
     "@prisma/client": "^5.8.0",
     "ali-oss": "^6.23.0",
+    "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
@@ -59,8 +64,10 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
     "sharp": "^0.33.5",
+    "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^5.0.0",
