--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -66,6 +66,7 @@
     "mysql2": "^3.6.5",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.7",
+    "qrcode": "^1.5.4",
     "sharp": "^0.33.5",
     "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
