--- a/ieclub-backend/docker-compose.yml
+++ b/ieclub-backend/docker-compose.yml
@@ -28,7 +28,7 @@ services:
     image: redis:7-alpine
     container_name: ieclub_redis
     restart: unless-stopped
-    command: redis-server --appendonly yes --requirepass ${REDIS_PASSWORD:-ieclub_redis_pass}
+    command: redis-server --appendonly yes
     ports:
       - "6379:6379"
     volumes:
@@ -36,7 +36,7 @@ services:
     networks:
       - ieclub_network
     healthcheck:
-      test: ["CMD", "redis-cli", "--raw", "incr", "ping"]
+      test: ["CMD", "redis-cli", "ping"]
       timeout: 20s
       retries: 10
 
