--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -51,11 +51,14 @@
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "csurf": "^1.11.0",
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
+    "express-session": "^1.18.2",
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
