[STAGING] 淇鐜鍙橀噺璇诲彇闂

--- a/ieclub-web/.env.development
+++ b/ieclub-web/.env.development
@@ -1,4 +1,14 @@
-﻿# Development Environment Configuration
+﻿# Development Environment Configuration (寮€鍙戠幆澧?
+# 鏈湴寮€鍙戦厤缃?
+# API Base URL - 浣跨敤鏈湴鏈嶅姟
 VITE_API_BASE_URL=http://localhost:3000/api
-VITE_APP_ENV=development
+
+# WebSocket URL
 VITE_WS_URL=ws://localhost:3000
+
+# Environment
+VITE_APP_ENV=development
+
+# 鍏朵粬閰嶇疆
+VITE_APP_TITLE=IEClub (寮€鍙戠増)
+VITE_ENABLE_DEBUG=true
