--- a/ieclub-web/.env.production
+++ b/ieclub-web/.env.production
@@ -1,6 +1,7 @@
 ﻿# Production Environment Configuration (鐢熶骇鐜)
-# 姝ｅ紡鍙戝竷锛屾墍鏈夌敤鎴峰彲瑙?
-# API Base URL - 姝ｅ紡鍩熷悕
+# 姝ｅ紡鐜閰嶇疆
+
+# API Base URL - 浣跨敤鐢熶骇鍩熷悕
 VITE_API_BASE_URL=https://ieclub.online/api
 
 # WebSocket URL
