feat: 娣诲姞绠＄悊鍛樺悗鍙扮郴缁熷拰鍔熻兘浼樺寲
鏂板鍔熻兘:
- 馃幆 瀹屾暣鐨勭鐞嗗憳鍚庡彴绯荤粺 (admin-web)
  * React + TypeScript + Ant Design 5
  * 浠〃鐩樸€佺敤鎴风鐞嗐€佸叕鍛婄鐞嗐€佹暟鎹粺璁?  * 瀹¤鏃ュ織銆佷妇鎶ュ鐞嗐€佺郴缁熻缃?- 馃懃 绠＄悊鍛樿璇佺郴缁?(adminAuthController)
  * JWT璁よ瘉銆佸瘑鐮佸姞瀵嗐€佸弻鍥犵礌璁よ瘉
  * 鏉冮檺鎺у埗涓棿浠躲€佸璁℃棩蹇?- 馃摙 鍏憡绠＄悊绯荤粺 (announcementController)
- 馃搳 鏁版嵁缁熻绯荤粺 (statsController)
- 馃懁 鐢ㄦ埛璧勬枡绯荤粺 (profileController)
- 馃摫 SMS鏈嶅姟 (smsService)

鍚庣浼樺寲:
- 鉁?浼樺寲璁よ瘉鎺у埗鍣?(authController)
  * 鏀硅繘閭鍜屾墜鏈哄彿楠岃瘉
  * 澧炲己閿欒澶勭悊鍜屾棩蹇楄褰?- 鉁?浼樺寲鏂囩珷鎺у埗鍣?(postController)
- 鉁?澧炲己琛ㄥ崟楠岃瘉涓棿浠?(validators)
- 鉁?浼樺寲閭欢鏈嶅姟 (emailService)

鏁版嵁搴撳彉鏇?
- 馃摝 Prisma schema 鏇存柊
  * 绠＄悊鍛樿〃 (admins)
  * 鍏憡琛?(announcements)
  * 瀹¤鏃ュ織琛?(admin_audit_logs)
  * 鐢ㄦ埛璀﹀憡/灏佺琛?
鏂囨。鏇存柊:
- 馃摎 绠＄悊鍛樼郴缁熷畬鏁存枃妗?(docs/admin/)
  * 绯荤粺璁捐鏂囨。 (140+ 椤?
  * 蹇€熷惎鍔ㄦ寚鍗?  * 鐢ㄦ埛鎿嶄綔鎵嬪唽
  * 閮ㄧ讲鎸囧崡
- 馃摎 璁よ瘉绯荤粺浼樺寲鎬荤粨
- 馃摎 鏇存柊鏂囨。绱㈠紩 (docs/INDEX.md)

鑴氭湰宸ュ叿:
- 馃敡 绠＄悊鍛樺垵濮嬪寲鑴氭湰 (scripts/init-admin.js)
- 馃敡 绠＄悊鍛樼郴缁熷惎鍔ㄨ剼鏈?(scripts/admin/START_ADMIN_NOW.ps1)

閰嶇疆:
- 鈿欙笍 鏇存柊 .gitignore (鎺掗櫎 zip 鏂囦欢)
- 鈿欙笍 鏇存柊 package.json (鏂板渚濊禆)

--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -10,6 +10,7 @@
     "init:rbac": "node scripts/init-rbac.js",
     "assign:role": "node scripts/assign-role.js",
     "check:db": "node scripts/check-db.js",
+    "init:admin": "node scripts/init-admin.js",
     "migrate": "npx prisma migrate deploy",
     "migrate:dev": "npx prisma migrate dev",
     "migrate:reset": "npx prisma migrate reset",
@@ -59,6 +60,7 @@
     "archiver": "^7.0.1",
     "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
+    "cheerio": "^1.1.2",
     "compression": "^1.8.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -80,6 +82,7 @@
     "nodemailer": "^6.9.7",
     "qrcode": "^1.5.4",
     "sharp": "^0.33.5",
+    "speakeasy": "^2.0.0",
     "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
