--- a/ieclub-backend/env.staging.template
+++ b/ieclub-backend/env.staging.template
@@ -1,142 +1,136 @@
-# IEClub 后端 - 测试环境配置
-# 用于内部测试，不影响线上用户
+# =================================================================
+# IEClub 测试环境配置模板
+# =================================================================
+# 
+# 用途: 测试环境的环境变量配置模板
+# 使用: 复制此文件为 .env.staging 并填入实际值
+# 
+# 创建命令:
+#   cp env.staging.template .env.staging
+#   nano .env.staging  # 编辑配置
+#
+# 更新: 2025-11-06
+# =================================================================
 
-# ============================================
-# 环境配置
-# ============================================
+# -----------------------------------------------------------------
+# 基础配置
+# -----------------------------------------------------------------
 NODE_ENV=staging
 PORT=3001
+API_BASE_URL=https://ieclub.online/api/staging
 
-# ============================================
-# 数据库配置（测试数据库）
-# ============================================
-DATABASE_URL="mysql://ieclub_user:your_password@localhost:3306/ieclub_staging"
+# -----------------------------------------------------------------
+# 数据库配置 (MySQL)
+# -----------------------------------------------------------------
+# 格式: mysql://用户名:密码@主机:端口/数据库名
+DATABASE_URL="mysql://ieclub:your_mysql_password@localhost:3306/ieclub_staging"
 
-# ============================================
+# 单独的数据库连接参数（可选，用于脚本）
+DB_HOST=localhost
+DB_PORT=3306
+DB_USER=ieclub
+DB_PASSWORD=your_mysql_password
+DB_NAME=ieclub_staging
+
+# -----------------------------------------------------------------
 # Redis 配置
-# ============================================
+# -----------------------------------------------------------------
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=
+REDIS_PASSWORD=your_redis_password
 REDIS_DB=1
 
-# ============================================
+# Session 配置
+SESSION_SECRET=your_session_secret_at_least_32_characters_long_staging
+
+# -----------------------------------------------------------------
 # JWT 配置
-# ============================================
-JWT_SECRET=your_jwt_secret_key_staging
-JWT_EXPIRES_IN=7d
-JWT_REFRESH_SECRET=your_jwt_refresh_secret_key_staging
-JWT_REFRESH_EXPIRES_IN=30d
+# -----------------------------------------------------------------
+# 生成强密钥的方法:
+#   node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
 
-# ============================================
-# 微信小程序配置
-# ============================================
-WECHAT_APPID=your_wechat_appid
-WECHAT_SECRET=your_wechat_secret
+JWT_SECRET=your_jwt_secret_at_least_64_characters_long_for_staging_environment_security
+JWT_REFRESH_SECRET=your_jwt_refresh_secret_at_least_64_characters_long_for_staging
 
-# ============================================
-# OSS 配置（可选）
-# ============================================
-OSS_REGION=oss-cn-hangzhou
-OSS_ACCESS_KEY_ID=
-OSS_ACCESS_KEY_SECRET=
-OSS_BUCKET=
-OSS_ENDPOINT=
-OSS_CDN_DOMAIN=
+# Token 过期时间
+JWT_EXPIRES_IN=1h
+JWT_REFRESH_EXPIRES_IN=7d
 
-# ============================================
-# 邮件配置
-# ============================================
+# -----------------------------------------------------------------
+# 邮件服务配置
+# -----------------------------------------------------------------
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
 EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password
-EMAIL_FROM=IEClub <your_email@gmail.com>
+EMAIL_PASSWORD=your_app_specific_password
+EMAIL_FROM="IEClub Staging <no-reply@ieclub.online>"
 
-# ============================================
-# CORS 配置（测试环境）
-# ============================================
-CORS_ORIGIN=http://localhost:5173,https://test.ieclub.online
+# -----------------------------------------------------------------
+# 前端配置
+# -----------------------------------------------------------------
+FRONTEND_URL=https://ieclub.online
+CORS_ORIGIN=https://ieclub.online
 
-# ============================================
-# 限流配置
-# ============================================
+# -----------------------------------------------------------------
+# 文件上传配置
+# -----------------------------------------------------------------
+UPLOAD_DIR=./uploads
+MAX_FILE_SIZE=10485760
+ALLOWED_FILE_TYPES=image/jpeg,image/png,image/gif,image/webp
+
+# -----------------------------------------------------------------
+# 日志配置
+# -----------------------------------------------------------------
+LOG_LEVEL=debug
+LOG_FILE=./logs/staging.log
+
+# -----------------------------------------------------------------
+# 安全配置
+# -----------------------------------------------------------------
 RATE_LIMIT_WINDOW_MS=900000
 RATE_LIMIT_MAX_REQUESTS=100
 
-# ============================================
-# 文件上传限制
-# ============================================
-MAX_IMAGE_SIZE=5242880
-MAX_DOCUMENT_SIZE=20971520
-MAX_VIDEO_SIZE=104857600
-ALLOWED_IMAGE_TYPES=image/jpeg,image/png,image/gif,image/webp
-ALLOWED_DOCUMENT_TYPES=application/pdf,application/msword
+# HTTPS 配置
+FORCE_HTTPS=true
 
-# ============================================
-# 日志配置
-# ============================================
-LOG_LEVEL=debug
-LOG_MAX_SIZE=20m
-LOG_MAX_FILES=14d
+# -----------------------------------------------------------------
+# 第三方服务配置（如需要）
+# -----------------------------------------------------------------
+# 微信登录
+# WECHAT_APP_ID=your_wechat_app_id
+# WECHAT_APP_SECRET=your_wechat_app_secret
 
-# ============================================
-# Sentry 配置（可选）
-# ============================================
-SENTRY_DSN=
+# 支付宝
+# ALIPAY_APP_ID=your_alipay_app_id
+# ALIPAY_PRIVATE_KEY=your_alipay_private_key
 
-# ============================================
-# 推送配置
-# ============================================
-PUSH_ENABLED=true
-PUSH_BATCH_SIZE=100
-PUSH_RETRY_TIMES=3
+# 云存储（如七牛、阿里云OSS）
+# OSS_ACCESS_KEY_ID=your_oss_access_key
+# OSS_ACCESS_KEY_SECRET=your_oss_secret_key
+# OSS_BUCKET=your_bucket_name
+# OSS_REGION=your_region
 
-# ============================================
-# 缓存配置
-# ============================================
-CACHE_TTL_SHORT=300
-CACHE_TTL_MEDIUM=3600
-CACHE_TTL_LONG=86400
+# -----------------------------------------------------------------
+# 测试环境特殊配置
+# -----------------------------------------------------------------
+# 启用调试模式
+DEBUG=true
 
-# ============================================
-# 业务配置
-# ============================================
-# 话题配置
-TOPIC_TITLE_MIN_LENGTH=5
-TOPIC_TITLE_MAX_LENGTH=100
-TOPIC_CONTENT_MIN_LENGTH=10
-TOPIC_CONTENT_MAX_LENGTH=10000
-TOPIC_MAX_IMAGES=9
-TOPIC_MAX_DOCUMENTS=3
-TOPIC_MAX_TAGS=5
+# 允许测试账号
+ALLOW_TEST_ACCOUNTS=true
 
-# 评论配置
-COMMENT_MIN_LENGTH=1
-COMMENT_MAX_LENGTH=1000
-COMMENT_MAX_IMAGES=3
+# 数据库查询日志
+PRISMA_QUERY_LOG=true
 
-# 积分配置
-CREDITS_TOPIC_CREATE=10
-CREDITS_COMMENT_CREATE=2
-CREDITS_LIKE_RECEIVED=1
-CREDITS_DAILY_LOGIN=5
-
-# 推荐配置
-RECOMMEND_TOPICS_COUNT=20
-RECOMMEND_REFRESH_INTERVAL=3600
-
-# 热度算法配置
-HOT_SCORE_GRAVITY=1.8
-HOT_SCORE_VIEW_WEIGHT=1
-HOT_SCORE_LIKE_WEIGHT=2
-HOT_SCORE_COMMENT_WEIGHT=3
-HOT_SCORE_BOOKMARK_WEIGHT=2
-
-# 供需匹配配置
-MATCH_SCORE_SKILLS_WEIGHT=0.5
-MATCH_SCORE_INTERESTS_WEIGHT=0.3
-MATCH_SCORE_LOCATION_WEIGHT=0.2
-MATCH_MIN_SCORE=0.6
-
+# =================================================================
+# 重要提示
+# =================================================================
+#
+# 1. ⚠️  不要将此文件的实际配置版本提交到 Git
+# 2. 🔒 所有密钥和密码必须使用强随机值
+# 3. 📝 生产环境使用 .env 文件，测试环境使用 .env.staging
+# 4. 🗄️  测试数据库必须与生产数据库分离
+# 5. 📧 测试环境可以使用独立的邮箱账号
+#
+# =================================================================
