[STAGING] 淇CORS閰嶇疆锛屾坊鍔爐est.ieclub.online鏀寔

--- a/ieclub-backend/env.staging.template
+++ b/ieclub-backend/env.staging.template
@@ -69,8 +69,9 @@ EMAIL_FROM="IEClub Staging <no-reply@ieclub.online>"
 # -----------------------------------------------------------------
 # 前端配置
 # -----------------------------------------------------------------
-FRONTEND_URL=https://ieclub.online
-CORS_ORIGIN=https://ieclub.online
+FRONTEND_URL=https://test.ieclub.online
+CORS_ORIGIN=https://test.ieclub.online
+ALLOWED_ORIGINS=https://test.ieclub.online
 
 # -----------------------------------------------------------------
 # 文件上传配置
