[PRE-DEPLOY] 正式发布

--- a/ieclub-backend/.env.staging
+++ b/ieclub-backend/.env.staging
@@ -45,14 +45,15 @@ OSS_ENDPOINT=
 OSS_CDN_DOMAIN=
 
 # ============================================
-# 邮件配置
+# 邮件配置（测试环境 - 模拟发送）
 # ============================================
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_SECURE=false
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_email_password
-EMAIL_FROM=IEClub <your_email@gmail.com>
+EMAIL_USER=test@ieclub.online
+EMAIL_PASSWORD=test_password_staging
+EMAIL_FROM=IEClub Staging <test@ieclub.online>
+ALLOW_TEST_CODE=true
 
 # ============================================
 # CORS 配置（测试环境）
