fix: 修复验证码邮件发送问题并新增图形验证码功能
- 修复邮件配置变量名错误 (SMTP_* -> EMAIL_*)
- 简化邮件服务配置检测逻辑
- 新增图形验证码服务 (svg-captcha)
- 新增图形验证码API接口
- 优化数据库错误处理
- 添加邮件测试脚本
- 更新环境变量配置示例

--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -29,12 +29,14 @@ SESSION_MAX_AGE=86400000
 UPLOAD_MAX_SIZE=10485760
 UPLOAD_ALLOWED_TYPES=image/jpeg,image/png,image/gif,image/webp,application/pdf
 
-# Email (Optional)
-SMTP_HOST=
-SMTP_PORT=
-SMTP_USER=
-SMTP_PASS=
-SMTP_FROM=
+# Email (QQ邮箱示例)
+EMAIL_HOST=smtp.qq.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=2812149844@qq.com
+EMAIL_PASSWORD=你的QQ邮箱授权码
+EMAIL_FROM=2812149844@qq.com
+# QQ邮箱授权码获取: 登录QQ邮箱 -> 设置 -> 账户 -> 开启SMTP -> 生成授权码
 
 # OSS (Optional - Aliyun Object Storage Service)
 OSS_ENDPOINT=
