--- a/ieclub-backend/package.json
+++ b/ieclub-backend/package.json
@@ -83,6 +83,7 @@
     "qrcode": "^1.5.4",
     "sharp": "^0.33.5",
     "speakeasy": "^2.0.0",
+    "svg-captcha": "^1.4.0",
     "unzipper": "^0.12.3",
     "uuid": "^9.0.1",
     "winston": "^3.11.0",
