--- a/ieclub-backend/.env.example
+++ b/ieclub-backend/.env.example
@@ -15,7 +15,8 @@ REDIS_DB=0
 
 # JWT
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
-JWT_EXPIRES_IN=7d
+JWT_EXPIRES_IN=2h
+JWT_REFRESH_SECRET=your-super-secret-refresh-token-key-change-this-in-production
 JWT_REFRESH_EXPIRES_IN=30d
 
 # CORS
