--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -6,7 +6,9 @@
     "pages/publish/index",
     "pages/activities/index",
     "pages/profile/index",
-    "pages/login/index"
+    "pages/login/index",
+    "pages/settings/set-password/index",
+    "pages/settings/change-password/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
