feat: 完成小程序账号绑定功能

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -8,7 +8,8 @@
     "pages/profile/index",
     "pages/login/index",
     "pages/settings/set-password/index",
-    "pages/settings/change-password/index"
+    "pages/settings/change-password/index",
+    "pages/settings/account-binding/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
