--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -8,6 +8,7 @@
     "pages/profile/index",
     "pages/login/index",
     "pages/forgot-password/index",
+    "pages/account-security/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
