feat: 添加小程序'我的话题'页面 - 高质量实现完整功能

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -9,6 +9,7 @@
     "pages/login/index",
     "pages/forgot-password/index",
     "pages/account-security/index",
+    "pages/my-topics/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
