feat: 添加'我的收藏'功能 - 前后端完整实现

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -10,6 +10,7 @@
     "pages/forgot-password/index",
     "pages/account-security/index",
     "pages/my-topics/index",
+    "pages/my-favorites/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
