feat: 实现关注/粉丝列表功能（三端同步）
- 小程序端：新增following和followers页面，支持分页加载
- 网页端：新增MyFollowing和MyFollowers组件，响应式设计
- 个人中心集成：统计数据点击可跳转到对应列表
- 功能完整：关注/取消关注、骨架屏、空状态、错误处理
- UI设计：关注列表青色主题，粉丝列表粉紫色主题
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -11,6 +11,8 @@
     "pages/account-security/index",
     "pages/my-topics/index",
     "pages/my-favorites/index",
+    "pages/following/index",
+    "pages/followers/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
