--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -11,6 +11,7 @@
     "pages/account-security/index",
     "pages/my-topics/index",
     "pages/my-favorites/index",
+    "pages/my-activities/index",
     "pages/following/index",
     "pages/followers/index",
     "pages/settings/set-password/index",
