feat: 实现关于我们页面（双端同步）
- 小程序端：新增about页面，展示平台介绍和团队信息
- 网页端：新增About组件，响应式设计
- 内容完整：平台介绍、核心功能、数据统计、团队介绍、联系方式
- 交互优化：复制文本、外部链接提示、动画效果
- UI设计：绿色渐变主题，卡片布局，浮动动画
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -14,6 +14,7 @@
     "pages/my-activities/index",
     "pages/following/index",
     "pages/followers/index",
+    "pages/about/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
