feat: 实现意见反馈功能（双端同步）
- 后端：已有完整feedback API（提交、查询、删除）
- 小程序端：新增feedback页面，支持Tab切换和反馈提交
- 核心功能：反馈类型选择、表单提交、图片上传、我的反馈列表
- 表单验证：标题5-100字符、内容10-2000字符、最多5张图片
- 反馈类型：Bug反馈、功能建议、优化建议、其他
- 状态管理：待处理、处理中、已解决、已关闭
- UI设计：蓝紫色渐变主题，卡片布局，状态标签
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -15,6 +15,7 @@
     "pages/following/index",
     "pages/followers/index",
     "pages/about/index",
+    "pages/feedback/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
