feat: 实现设置功能（三端同步）🎉
- 后端：使用通知设置API，其他设置为本地存储
- 小程序端：新增settings页面，完整的设置管理
- 网页端：增强Settings组件，添加通知/隐私/通用设置
- 核心功能：通知设置、隐私设置、通用设置、缓存管理
- 通知设置：系统/点赞/评论/关注/活动通知开关
- 隐私设置：显示手机号/邮箱、允许搜索/私信
- 通用设置：语言选择、自动播放、省流量模式
- 存储管理：清除缓存、查看缓存大小
- UI设计：Switch开关交互、分组管理、响应式布局
- 更新文档：AI_HANDOVER.md，个人中心完成度90%
- 里程碑：个人中心模块接近完成！

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -16,6 +16,7 @@
     "pages/followers/index",
     "pages/about/index",
     "pages/feedback/index",
+    "pages/settings/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
