feat: 实现编辑个人信息功能（三端同步）✨
- 后端：使用已有profile API（PUT /profile更新信息）
- 小程序端：新增edit-profile页面，完整的个人信息编辑
- 网页端：新增EditProfile组件，响应式设计
- 核心功能：基本信息、主页信息、社交链接、学校信息、标签管理
- 基本信息：昵称、头像、性别、个人简介
- 主页信息：封面图、座右铭、详细介绍
- 社交链接：网站、GitHub、B站、微信
- 学校信息：学校、专业、年级
- 标签管理：技能标签和兴趣标签动态添加/删除
- 图片功能：头像和封面图预览（待集成上传API）
- 表单验证：字符数限制、必填项验证
- UI设计：紫色渐变主题、分组布局、标签胶囊
- 用户体验：实时预览、保存后自动跳转
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -17,6 +17,7 @@
     "pages/about/index",
     "pages/feedback/index",
     "pages/settings/index",
+    "pages/edit-profile/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
