feat: 实现用户主页展示功能（小程序端）🎨
- 后端：使用已有profile API（GET /profile/:userId）
- 小程序端：新增user-profile页面，完整的用户主页展示
- 核心功能：封面图、头像、用户信息、统计数据、社交链接、标签、Tab切换
- 用户信息：昵称、认证标记、等级、座右铭、简介、学校信息
- 社交链接：网站、GitHub、B站、微信（一键复制）
- 技能兴趣：紫色渐变技能标签、粉色渐变兴趣标签
- Tab导航：发布内容、关于我、成就勋章
- 关注功能：关注/取消关注、统计数据跳转
- 操作按钮：编辑资料（本人）、关注+私信（他人）
- UI设计：紫色渐变主题、封面+头像布局、标签胶囊
- 个人中心：添加编辑资料浮动按钮
- 代码质量：空状态友好、数据加载完整、响应式交互
- 用户体验：视觉清晰、信息完整、操作流畅
- 更新文档：AI_HANDOVER.md记录开发详情

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -18,6 +18,7 @@
     "pages/feedback/index",
     "pages/settings/index",
     "pages/edit-profile/index",
+    "pages/user-profile/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
