feat: 数据统计功能完成 个人中心100%完成

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -19,6 +19,7 @@
     "pages/settings/index",
     "pages/edit-profile/index",
     "pages/user-profile/index",
+    "pages/my-stats/index",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
     "pages/settings/account-binding/index"
