[PRE-DEPLOY] 更新说明

--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -20,9 +20,11 @@
     "pages/edit-profile/index",
     "pages/user-profile/index",
     "pages/my-stats/index",
+    "pages/topic-detail/topic-detail",
     "pages/settings/set-password/index",
     "pages/settings/change-password/index",
-    "pages/settings/account-binding/index"
+    "pages/settings/account-binding/index",
+    "pages/notifications/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
