--- a/ieclub-web/package.json
+++ b/ieclub-web/package.json
@@ -14,6 +14,7 @@
     "lucide-react": "^0.554.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.5.6",
     "react-router-dom": "^6.20.0",
     "zustand": "^4.4.7"
   },
