--- a/ieclub-frontend/app.json
+++ b/ieclub-frontend/app.json
@@ -30,7 +30,9 @@
     "pages/publish-activity/index",
     "pages/activity-detail/activity-detail",
     "pages/qrcode-display/qrcode-display",
-    "pages/checkin-stats/checkin-stats"
+    "pages/checkin-stats/checkin-stats",
+    "pages/groups/index",
+    "pages/group-detail/index"
   ],
   "window": {
     "backgroundTextStyle": "light",
